AC_INIT([libopentmf-driver-skeleton], [0.1], [reinderfeenstra@gmail.com], [libopentmf-driver-skeleton], [http://github.com/opentmf/libopentmf-driver-skeleton])
AC_CONFIG_AUX_DIR([config])
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_SRCDIR([src/driver.c])

AM_INIT_AUTOMAKE([foreign])
LT_INIT

AC_PROG_CC
AC_PROG_CC_STDC

AC_CONFIG_FILES( \
  Makefile \
  src/Makefile \
)

AC_OUTPUT
